--- a/src/main/resources/templates/deficiencia/listar.html
+++ b/src/main/resources/templates/deficiencia/listar.html
@@ -7,13 +7,13 @@
             <div class="card-header d-flex justify-content-between align-items-center">
                 <h5 class="card-title"><i class="fa-solid fa-users"></i> Listagem de Pessoas</h5>
                 <div class="btn-group">
-                    <a class="btn btn-success" href="/pessoa/create"><i class="fa-solid fa-plus"></i> Adicionar</a>
+                    <a class="btn btn-success" href="/deficiencia/create"><i class="fa-solid fa-plus"></i> Adicionar</a>
                     <button type="button" class="btn btn-success dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
                         <span class="visually-hidden">Toggle</span>
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/pessoa?display=false">Excluídos</a></li>
-                        <li><a class="dropdown-item" href="/pessoa">Ativos</a></li>
+                        <li><a class="dropdown-item" href="/deficiencia?display=false">Excluídos</a></li>
+                        <li><a class="dropdown-item" href="/deficiencia">Ativos</a></li>
                     </ul>                        
                 </div>
                 
@@ -28,18 +28,18 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr th:each="pessoa : ${pessoas}">
-                            <td th:text="${pessoa.id}"></td>
-                            <td th:text="${pessoa.nome}"></td>
+                        <tr th:each="deficiencia : ${deficiencias}">
+                            <td th:text="${deficiencia.id}"></td>
+                            <td th:text="${deficiencia.nome}"></td>
                             <td>
                                 <div class="btn-group">
-                                    <a class="btn btn-light" th:href="@{/pessoa/update/{id}(id=${pessoa.id})}"><i class="fa-solid fa-pen-ruler"></i> Alterar</a>
-                                    <a class="btn btn-light" th:href="@{/pessoa/visualizar/{id}(id=${pessoa.id})}"><i class="fa-solid fa-magnifying-glass"></i> Visualizar</a>
-                                    <div th:if="${pessoa.ativo}">
-                                        <a class="btn btn-light" th:href="@{/pessoa/remover/{id}(id=${pessoa.id})}"><i class="fa-solid fa-trash"></i> Remover</a>
+                                    <a class="btn btn-light" th:href="@{/deficiencia/update/{id}(id=${deficiencia.id})}"><i class="fa-solid fa-pen-ruler"></i> Alterar</a>
+                                    <a class="btn btn-light" th:href="@{/deficiencia/visualizar/{id}(id=${deficiencia.id})}"><i class="fa-solid fa-magnifying-glass"></i> Visualizar</a>
+                                    <div th:if="${deficiencia.ativo}">
+                                        <a class="btn btn-light" th:href="@{/deficiencia/remover/{id}(id=${deficiencia.id})}"><i class="fa-solid fa-trash"></i> Remover</a>
                                     </div>
-                                    <div th:if="${not pessoa.ativo}">
-                                        <a class="btn btn-light" th:href="@{/pessoa/remover/{id}(id=${pessoa.id})}"><i class="fa-solid fa-reply"></i> Recuperar</a>
+                                    <div th:if="${not deficiencia.ativo}">
+                                        <a class="btn btn-light" th:href="@{/deficiencia/remover/{id}(id=${deficiencia.id})}"><i class="fa-solid fa-reply"></i> Recuperar</a>
                                     </div>
                                 </div>
                             </td>                            
